-> Added email-notifications (notifymods-module) to fight us, guestbook, join us, download (spongebob)
-> Added articles/navtop (spongebob)
-> Added delete mirror checkbox to files/edit (spongebob)
-> Added top9 (order) to abcode (spongebob)
-> Added thread author annotation to board/thread (spongebob)
-> Added search for clan names to clans/manage (spongebob)
-> Fixed bug in user-gallery and gallery (spongebob)
-> Fixed board-counter after delete a thread (spongebob)
-> Fixed delete own board/subscription and board/attachments (spongebob)
-> Changed: static linkus-vars now changeable (spongebob)
-> Changed: rename gallery-image if filename already existent (spongebob)
-> Changed: user now changeable in cash/edit (spongebob)
-> Reworked users/nextbirth and users/navbirth (spongebob)
-> Reworked board/sort (spongebob)
-> Reworked board/stats (spongebob)


ClanSphere 2009.0.3 >> 2009-12-06
___________________________________________________________

-> Added topmatch checkbox for clanwars and wars/navtop (palle)
-> Added possibility to list only wars of one squad in wars/navlist (gahero/palle)
-> Fixed security incident in usergallery (nenti)
-> Fixed deactivation of contact, joinus and fightus modul (duriel)
-> Fixed vote for gallery pics (fr33z3m4n)
-> Fixed categories creation without access (fr33z3m4n)
-> Fixed many bugs in the server module (fr33z3m4n)
-> Fixed many bugs in the comments module, also two security bugs (gahero)
-> Fixed some bugs in the cups module (duriel)
-> Reworked board toplist for much better performance (duriel)
-> Reworked war statistic - squadbased and more information (gahero)
-> Updated FCKEditor to 2.6.5 (hajo)


ClanSphere 2009.0.2 >> 2009-07-07
___________________________________________________________

>> Security: Updated FCKEditor to 2.6.4.1 (hajo)

-> Changed fckeditor quickupload to use the matching subdirectory (hajo)
-> Fixed ajax uploads to not cause php errors in some cases (hajo)