@@ -21,6 +21,7 @@ ___________________________________________________________
 -> Added top9 (order) to abcode (spongebob)
 -> Added thread author annotation to board/thread (spongebob)
 -> Added search for clan names to clans/manage (spongebob)
+-> Added an admin menu to manage, create and option pages (gahero)
 -> Fixed bug in user-gallery and gallery (spongebob)
 -> Fixed board-counter after delete a thread (spongebob)
 -> Fixed delete own board/subscription and board/attachments (spongebob)
